Adding Nick reference to cosine function

--- a/docs/bibliography.bib
+++ b/docs/bibliography.bib
@@ -10,6 +10,15 @@
   annotation = {Page Version ID: 1073834153}
 }
 
+@misc{FastAccurateSineCosine_2017_Nick,
+  title = {Fast and Accurate Sine/Cosine - {{Devmaster Forum}}},
+  author = {Nick, Nick},
+  year = {2017},
+  month = dec,
+  howpublished = {https://web.archive.org/web/20171228230531/http://forum.devmaster.net/t/fast-and-accurate-sine-cosine/9648},
+  file = {/home/rob/Zotero/storage/DJTM8ZYV/9648.html}
+}
+
 @misc{HandmadeCosine__Rohan,
   title = {Handmade {{Cosine}}},
   author = {Rohan, Robert},
